Fix AC and HP input height to prevent number clipping (#646)
The AC and HP numbers in the shield boxes on the character sheet were being cut off at the top. The input height was set to 17px which was insufficient for the 24px font size. Increased the height from 17px to 28px to properly accommodate the font size and prevent visual clipping.

Fixes the display issue in the .ac-and-hp input elements.

--- a/styles/dcc.scss
+++ b/styles/dcc.scss
@@ -1988,7 +1988,7 @@ a.inline-roll {
       align-self: center;
       border: 0;
       font-size: 24px;
-      height: 17px;
+      height: 28px;
       justify-self: center;
       margin-bottom: 5px;
       width: 37px;
